--- a/templates/products.html
+++ b/templates/products.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
-{% block title %}Customers{% endblock %}
+{% block title %}Products{% endblock %}
 {% block content %}
-<h1>Customers Table</h1>
+<h1>Products Table</h1>
 <table>
     <tr>
         <th>ID</th>
         <th>Name</th>
-        <th>Email</th>
+        <th>Price</th>
         <th>Actions</th>
     </tr>
-    {% for customer in customers %}
+    {% for product in products %}
         <tr>
-            <td> {{customer.id}} </td>
-            <td> {{customer.name}} </td>
-            <td> {{customer.email}} </td>
+            <td> {{product.id}} </td>
+            <td> {{product.name}} </td>
+            <td> {{product.price}} </td>
             <td> View Orders </td>
         </tr>
     {% endfor %}
