--- a/templates/customers.html
+++ b/templates/customers.html
@@ -14,7 +14,7 @@
             <td> {{customer.id}} </td>
             <td> {{customer.name}} </td>
             <td> {{customer.email}} </td>
-            <td> View Orders </td>
+            <td> <a href="{{url_for('get_customer_orders', customer_id=customer.id)}}">View Orders</a> </td>
         </tr>
     {% endfor %}
     
