--- a/templates/edit_customer.html
+++ b/templates/edit_customer.html
@@ -16,4 +16,12 @@
     {{ form.submit }}
 </form>
 
+<br><br>
+
+<form method="POST" action="{{ url_for('delete_customer', customer_id=id) }}" 
+      onsubmit="return confirm('Are you sure you want to delete this customer?');">
+      {{ form.hidden_tag() }}
+    <button type="submit" class="btn btn-danger">Delete</button>
+</form>
+
 {% endblock %}
