--- a/templates/products.html
+++ b/templates/products.html
@@ -2,6 +2,8 @@
 {% block title %}Products{% endblock %}
 {% block content %}
 <h1>Products Table</h1>
+<button><a href="{{url_for('create_new_product')}}">Add Product</a></button>
+<button><a>View Deleted Products</a></button><br><br>
 <table>
     <tr>
         <th>ID</th>
@@ -14,7 +16,7 @@
             <td> {{product.id}} </td>
             <td> {{product.name}} </td>
             <td> {{product.price}} </td>
-            <td> View Orders </td>
+            <td> View Orders <a href="{{ url_for('edit_product', product_id=product.id) }}">Edit Product</a> </td>
         </tr>
     {% endfor %}
     
