--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -14,4 +14,11 @@
 
     {{ form.submit }}
 </form>
+<br><br>
+
+<form method="POST" action="{{ url_for('delete_product', product_id=id) }}" 
+      onsubmit="return confirm('Are you sure you want to delete this product?');">
+      {{ form.hidden_tag() }}
+    <button type="submit" class="btn btn-danger">Delete</button>
+</form>
 {% endblock %}
