--- a/templates/products.html
+++ b/templates/products.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Products Table</h1>
 <button><a href="{{url_for('create_new_product')}}">Add Product</a></button>
-<button><a>View Deleted Products</a></button><br><br>
+<button><a href="{{url_for('get_deleted_products')}}">View Deleted Products</a></button><br><br>
 <table>
     <tr>
         <th>ID</th>
@@ -16,7 +16,9 @@
             <td> {{product.id}} </td>
             <td> {{product.name}} </td>
             <td> {{product.price}} </td>
-            <td> View Orders <a href="{{ url_for('edit_product', product_id=product.id) }}">Edit Product</a> </td>
+            <td> <a href="{{ url_for('edit_product', product_id=product.id) }}">Edit Product</a> <br>
+                <a href="{{ url_for('get_product_orders', product_id=product.id) }}">View Orders </a>
+            </td>
         </tr>
     {% endfor %}
     
