--- a/templates/deleted_products.html
+++ b/templates/deleted_products.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!--
 <h1>Deleted Products</h1>
 
 <table>
@@ -14,5 +15,28 @@
             <td> <a href="{{url_for('restore_product', product_id=product.id)}}">Restore product</a> </td>
         </tr>
     {% endfor %}
-</table>
+</table>-->
+<div class="container-fluid">
+    <h1>Deleted Products</h1>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for product in products %}
+                <tr>
+                    <td>{{ product.name }}</td>
+                    <td> {{ product.price }} </td>
+                    <td> <a class="btn btn-primary" role="button" href="{{url_for('restore_product', product_id=product.id)}}">Restore Product</a> </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+</div>
 {% endblock %}
