--- a/templates/products.html
+++ b/templates/products.html
@@ -2,25 +2,28 @@
 {% block title %}Products{% endblock %}
 {% block content %}
 <h1>Products Table</h1>
-<button><a href="{{url_for('create_new_product')}}">Add Product</a></button>
-<button><a href="{{url_for('get_deleted_products')}}">View Deleted Products</a></button><br><br>
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Actions</th>
-    </tr>
-    {% for product in products %}
+<a class="btn btn-primary" href="{{url_for('create_new_product')}}" role="button">Add Product</a>
+<a class="btn btn-primary" href="{{url_for('get_deleted_products')}}" role="button">View Deleted Products</a><br><br>
+
+<div class="container-fluid">
+    <table class="table">
         <tr>
-            <td> {{product.id}} </td>
-            <td> {{product.name}} </td>
-            <td> {{product.price}} </td>
-            <td> <a href="{{ url_for('edit_product', product_id=product.id) }}">Edit Product</a> <br>
-                <a href="{{ url_for('get_product_orders', product_id=product.id) }}">View Orders </a>
-            </td>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Price (€)</th>
+            <th>Actions</th>
         </tr>
-    {% endfor %}
-    
-</table>
+        {% for product in products %}
+            <tr>
+                <td> {{product.id}} </td>
+                <td> {{product.name}} </td>
+                <td> {{product.price}} </td>
+                <td> <a href="{{ url_for('edit_product', product_id=product.id) }}">Edit Product</a>
+                    <a href="{{ url_for('get_product_orders', product_id=product.id) }}">View Orders </a>
+                </td>
+            </tr>
+        {% endfor %}
+        
+    </table>
+</div>
 {% endblock %}
