--- a/templates/products.html
+++ b/templates/products.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Products{% endblock %}
 {% block content %}
-<h1>Products Table</h1>
+<h1>Products Table</h1><br>
 <a class="btn btn-primary" href="{{url_for('create_new_product')}}" role="button">Add Product</a>
 <a class="btn btn-primary" href="{{url_for('get_deleted_products')}}" role="button">View Deleted Products</a><br><br>
 
