--- a/templates/customers.html
+++ b/templates/customers.html
@@ -18,9 +18,10 @@
                 <td> {{customer.id}} </td>
                 <td> {{customer.name}} </td>
                 <td> {{customer.email}} </td>
-                <td> 
+                <td colspan="3"> 
                     <a href="{{url_for('edit_customer', customer_id=customer.id)}}">Edit Customer</a>
-                    <a href="{{url_for('get_customer_orders', customer_id=customer.id)}}">View Orders</a>  
+                    <a href="{{url_for('get_customer_orders', customer_id=customer.id)}}">View Orders</a>
+                    <a href="{{url_for('add_order', customer_id=customer.id)}}">Add Order</a>  
                 </td>
             </tr>
         {% endfor %}
