--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
     <h1 class="mb-4">Edit Product</h1>
-    <form method="POST" action="{{ url_for('create_new_product') }}">
+    <form method="POST" action="{{ url_for('edit_product', product_id=id) }}">
         {{ form.hidden_tag() }}
 
         <div class="mb-3">
