--- a/templates/orders.html
+++ b/templates/orders.html
@@ -39,7 +39,7 @@
                 <td> {{order.customer.name}} </td>
                 <td> 
                     <a href="{{url_for('index')}}">Edit Order</a>
-                    <a href="{{url_for('index')}}">View Order</a>  
+                    <a href="{{url_for('view_order', order_id=order.id)}}">View Order</a>  
                 </td>
             </tr>
         {% endfor %}
